--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ REACT_APP_RPC_URL_1="https://mainnet.infura.io/v3/d57f136bd5024f4889c74a1d4f7ce7
 REACT_APP_RPC_URL_137="https://polygon-mainnet.infura.io/v3/d57f136bd5024f4889c74a1d4f7ce760"
 REACT_APP_RPC_URL_10="https://optimism-mainnet.infura.io/v3/d57f136bd5024f4889c74a1d4f7ce760"
 REACT_APP_RPC_URL_42="https://solana-mainnet.g.alchemy.com/v2/o6yoXjm8YkUj0CLXhzUkwwy_oVUh3rXO"
+REACT_APP_RPC_URL_56 = https://profile.pancakeswap.com
 REACT_APP_RPC_URL_LOCAL="http://localhost:8545"
 
 # Backup websocket node url
