--- a/.env
+++ b/.env
@@ -9,6 +9,29 @@ REACT_APP_RPC_URL_137="https://polygon-mainnet.infura.io/v3/d57f136bd5024f4889c7
 REACT_APP_RPC_URL_10="https://optimism-mainnet.infura.io/v3/d57f136bd5024f4889c74a1d4f7ce760"
 REACT_APP_RPC_URL_42="https://solana-mainnet.g.alchemy.com/v2/o6yoXjm8YkUj0CLXhzUkwwy_oVUh3rXO"
 REACT_APP_RPC_URL_56 = https://profile.pancakeswap.com
+NEXT_PUBLIC_CHAIN_ID = "56"
+NEXT_PUBLIC_GTAG = "GTM-PXLD3XW"
+
+# 10+ nodes balanced, US/EU
+NEXT_PUBLIC_NODE_1 = "https://bsc-dataseed1.ninicoin.io"
+
+# 10+ nodes balanced, US/EU
+NEXT_PUBLIC_NODE_2 = "https://bsc-dataseed1.defibit.io"
+
+# 10+ nodes balanced in each region, global
+NEXT_PUBLIC_NODE_3 = "https://bsc-dataseed.binance.org"
+
+NEXT_PUBLIC_NODE_PRODUCTION = "https://nodes.pancakeswap.com"
+
+NEXT_PUBLIC_GRAPH_API_PROFILE = "https://api.thegraph.com/subgraphs/name/pancakeswap/profile"
+NEXT_PUBLIC_GRAPH_API_PREDICTION = "https://api.thegraph.com/subgraphs/name/pancakeswap/prediction-v2"
+NEXT_PUBLIC_GRAPH_API_LOTTERY = "https://api.thegraph.com/subgraphs/name/pancakeswap/lottery"
+NEXT_PUBLIC_GRAPH_API_NFT_MARKET = "https://api.thegraph.com/subgraphs/name/pancakeswap/nft-market"
+
+NEXT_PUBLIC_SNAPSHOT_BASE_URL = "https://testnet.snapshot.org"
+
+NEXT_PUBLIC_API_NFT = "https://nft.pancakeswap.com/api/v1"
+NEXT_PUBLIC_BIT_QUERY_ENDPOINT = "https://graphql.bitquery.io"
 REACT_APP_RPC_URL_LOCAL="http://localhost:8545"
 
 # Backup websocket node url
